# space

./: Cargo.toml  README.md
shell/: space.zsh
src/: app.rs  data.rs  handoff.rs  lib.rs  main.rs  parse.rs  space.rs  stack.rs  ui.rs
tests/: real_data.rs
